--- a/quiz.html
+++ b/quiz.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> QuizArena - Cheak Your Knowledge</title>
     <link rel="stylesheet" href="quiz.css">
+    <title>QuizArena - Cheak Your Knowledge</title>
 </head>
-
 <body>
     <div class="quiz-container">
-        <h1 class="question-tag">
-            Question Tag
-        </h1>
-        <p class="question-name">
-            Question
-        </p>
+        <h1 class="question-tag">Question Tag</h1>
+        <p class="question">Question</p>
         <ul>
             <li>
-                <input type="radio" id="option-a" name="options">
-                <label for="option-a" id="text-option-a"> Option - A</label>
+                <input type="radio" id="option-a" name="options" class="answer">
+                <label for="option-a" id="text-option-a">
+                    Option-A
+                </label>
             </li>
             <li>
-                <input type="radio" id="option-b" name="options">
-                <label for="option-b" id="text-option-b"> Option - B</label>
+                <input type="radio" id="option-b" name="options" class="answer">
+                <label for="option-b" id="text-option-b">
+                    Option-B
+                </label>
             </li>
             <li>
-                <input type="radio" id="option-c" name="options">
-                <label for="option-c" id="text-option-c"> Option - C</label>
+                <input type="radio" id="option-c" name="options" class="answer">
+                <label for="option-c" id="text-option-c">
+                    Option-C
+                </label>
             </li>
             <li>
-                <input type="radio" id="option-d" name="options">
-                <label for="option-d" id="text-option-d"> Option - D</label>
+                <input type="radio" id="option-d" name="options" class="answer">
+                <label for="option-d" id="text-option-d">
+                    Option-D
+                </label>
             </li>
         </ul>
-        <button class="submit">
-            Submit
-        </button>
+        <button class="submit">Submit</button>
     </div>
     <script src="quiz.js"></script>
 </body>
-
 </html>
